[CHAT] Integrated alby chat into form

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://postgres:Ataxxa1010,!@@db.wsclcwuddthubmbaueey.supabase.co:5432/postgres"
+ABLY_API_KEY="07NFSg.P98iQA:Lj19XEAv-IWpOKFugk32HxdlFO_rym6xvH9AtiHI3Ts"
