Added host to env

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgres://postgres:Ataxxa1010,!@@db.wsclcwuddthubmbaueey.supabase.co:5432/postgres"
 ABLY_API_KEY="07NFSg.P98iQA:Lj19XEAv-IWpOKFugk32HxdlFO_rym6xvH9AtiHI3Ts"
+HOST="'https://limit-edition1.vercel.app"
