--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^4.14.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "ably": "^1.2.5-beta.1",
+    "ably": "^1.2.39",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
